--- a/muro.html
+++ b/muro.html
@@ -4,21 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="assets/css/main.css" rel="stylesheet" type="text/css">
   <title>Document</title>
 </head>
 <body>
-  <div id="Muro">
-  <input type ="text" name ="estado" id="estado" placeholder="¿Qué esta pasando?"><br>
-      <select name="transporte">
+  <div id="saludos"></div>
+  <form action="" >
+
+      <input type ="text" name ="estado" id="estado" placeholder="¿Qué esta pasando?"><br>
+      <select id="privacidad" name="privacidad">
       <option value="amigos">Amigos</option>
       <option value="publico">Publico</option>
       </select>
-      <button type="button" name="publicar">Publicar</button>
+      <button type=button id="enviar">Submit</button>
+  </form>
       <br>
       <a href="" id="mostrar_publico" >Publico</a>
       <a href="" id="mostrar_Amigos">Amigos</a>
-  </div>
+
+    <div  id="resultado"></div>
     <script src=assets/js/main.js>
+
     </script>
 </body>
 
